@@ -14,6 +14,9 @@ LanguageTool Change Log
      usually have a better suggestion. For example, 'thinked' suggests 'thought',
      'womans' suggests 'women'.
 
+-Farsi (Persian):
+    -added initial support for Farsi
+
 -French:
     -added a synthesizer - the agreement rule can now make suggestions
      for some errors.
